Fixed spacing between task container and list title

--- a/css/main.css
+++ b/css/main.css
@@ -236,18 +236,18 @@ nav {
 
 .task-container {
 	width: 100%;
-	padding: 3em 0;
+	padding: 6em 0;
 }
 
 .current {
-	margin-bottom: 3em;
+	margin-bottom: 4em;
 }
 
 .task {
 	background: rgba(255, 255, 255, 0.95);
 	width: 90%;
 	height: 2.5em;
-	margin: 0.5em auto;
+	margin: 0.75em auto;
 }
 
 .checkbox {
